--- a/src/blocks/room-price/room-price.scss
+++ b/src/blocks/room-price/room-price.scss
@@ -11,7 +11,7 @@
   &__price {
     font-size: map.get(variables.$font-sizes, 'sm');
     font-weight: 700;
-
+    max-width: 62px;
     overflow: hidden;
     white-space: nowrap;
     text-overflow: ellipsis;
