--- a/src/pages/search-page/search-page.scss
+++ b/src/pages/search-page/search-page.scss
@@ -48,6 +48,10 @@
   }
 
   &__checkboxes {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    
     margin: 0;
     padding: 0;
     padding-top: 2px;
@@ -56,22 +60,27 @@
 
   &__checkbox {
     display: flex;
-    padding-top: 10px;
     list-style: none;
 
     &_wide-corr {
       max-width: 234px;
-      padding-top: 12px;
     }
 
     &_inv-help {
       max-width: 253px;
-      padding-top: 9px;
     }
   }
 
   &__available {
     margin-top: 32px;
+
+    &-container {
+      display: flex;
+      flex-direction: column;
+      gap: 9px;
+
+      padding-top: 12px;
+    }
   }
 
   &__facilities {
